[package]
name = "okbr"
description = "A cross-platform OnlyKey backup reader"
version = "0.2.0"
edition = "2021"
authors = ["svareille",]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/SimonVareille/OnlyKey-backup-reader"
repository = "https://github.com/SimonVareille/OnlyKey-backup-reader"
keywords = ["tui", "onlykey"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9"
anyhow = "1.0"
bitflags = "1.3"
chrono = "0.4"
clap = { version = "3.2", features = ["derive"] }
clap-verbosity-flag = "1.0"
clipboard = "0.5"
crossterm = "0.25"
data-encoding = "2.3"
ed25519-dalek = "1.0.1"
fern = "0.6"
generic-array = "0.14"
google-authenticator = "0.3"
log = "0.4"
num_enum = "0.5"
num-bigint-dig = "*"
rsa = "*"
salsa20 = { version = "0.9", features = ["hsalsa20"] }
sha2 = "0.10"
thiserror = "1.0"
tui = "0.19"
x25519-dalek = "1.2.0"

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"