[package]
name = "okbr"
description = "A cross-platform OnlyKey backup reader"
version = "1.1.1"
edition = "2021"
authors = ["svareille",]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/svareille/OnlyKey-backup-reader"
repository = "https://github.com/svareille/OnlyKey-backup-reader"
keywords = ["tui", "onlykey"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "yubico-otp-gen",
]

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
bitflags = "1.3"
byteorder = "1.4"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
clap-verbosity-flag = "2.0"
clipboard = "0.5"
crossterm = "0.26"
data-encoding = "2.3"
ed25519-dalek = "1.0.1"
fern = "0.6"
generic-array = "0.14"
google-authenticator = "0.3"
log = "0.4"
num_enum = "0.5"
num-bigint-dig = "0.7"
rsa = "*"
salsa20 = "0.10"
sha2 = "0.10"
thiserror = "1.0"
tui = "0.19"
typenum = "1.15"
x25519-dalek = "1.2.0"
yubico-otp-gen = {path = "./yubico-otp-gen"}

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"