[package]
name = "yubico-otp-gen"
description = "A Yubico OTP generator"
version = "0.1.0"
edition = "2021"
authors = ["Simon Vareille",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
byteorder = "1.4"
data-encoding = "2.3"
data-encoding-macro = "0.1"
rand = "*"